# xemil

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  example.c
include/: xemil.h  xmllib.h
src/: array.c  core.c  file.c  stb_ds.c  unicode.c  util.c  xinclude.c  xpointer.c
